2002-03-04  Jody Goldberg <jody@gnome.org>

	* src/sheet.c (sheet_cell_insert) : make it clear that this routine
	  does not link the expression or register the dependencies.
	(sheet_cell_remove_from_hash) : document state changes and use
	  dependend_unlink.
	(cb_remove_allcells) : cell_destroy will unlink.
	(cb_collect_cell) : be clear that the results are unlinked.
	(colrow_move) : some docs.
	(sheet_move_range) : simplify now that the collected cells are
	  unlinked rather than just having their depends dropped.

	* src/eval.c (cell_add_dependencies) : delete.
	(cell_drop_dependencies) : delete.

	* src/style.c (style_font_new_simple) : If we can't find a font check
	  a map to see if we know of something similar.
	(get_substitute_font) : moved here from the XL importer.

2002-03-03  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.c (cmd_rename_sheet,...) : now a wrapper around 
	  cmd_reorganize_sheets.
	(cmd_reorganize_sheets_apply) : moved into workbook.c as
	  workbook_sheet_reorganize
	(cmd_reorganize_sheets,...) : implement sheet renaming
	* src/commands.h : add an argument to cmd_rename_sheet
	* src/workbook-control-gui.c (cb_sheet_label_changed) : 
	  change invocation of cmd_rename_sheet
	* src/workbook.c (workbook_sheet_rename) replaced by
	  workbook_sheet_reorganize
	* src/workbook.h: ditto

2002-03-02  Jody Goldberg <jody@gnome.org>

	* src/eval.c (handle_tree_deps) : Use hooks for per dependent
	  link/unlink for each function.

2002-03-02  Jody Goldberg <jody@gnome.org>

	* src/global-gnome-font.c : Use string chunk.

	* src/sheet-object-cell-comment.c :  This is a GObject now.
	(comment_get_points) : fix x offset.

2002-03-01  Morten Welinder  <terra@diku.dk>

	* src/workbook-control-gui.c: Add dots to "Sort" entry.

	* src/complex.h (complex_scale_real): New function.

	* src/analysis-tools.c (fourier_fft, fourier_fft_inv): Clean using
	existing complex math routines.

2002-03-01  Andreas J. Guelzow <aguelzow@taliesin.ca>
